package org.trishinfotech.bridge;

public class LinkedStack implements StackImplementor {
    // TODO: InLab #3-1 (2) — 연결 리스트 기반 구현
}
