package org.trishinfotech.bridge;

public class OddStack extends Stack {
    // TODO: InLab #3-1 (2) — 홀수만 통과시키는 push 오버라이드
}
