package org.trishinfotech.bridge;

public interface StackImplementor {
    // TODO: InLab #3-1 (2) — push / pop / top / isEmpty / isFull / printStack
}
